tests/negative/neg_pr116_tab_indent.safe
-- migrate: skip
package neg_pr116_tab_indent

	function broken returns integer
	   return 1
